# mltools

./: .readthedocs.yaml  README.en.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
docs/: .readthedocs.yaml  requirements.txt
docs/source/: api.rst  conf.py  index.rst  入门.md  历史版本.md
example/: MLP.ipynb  dataloader.py  dataloder.py
example/src/: MLP.ipynb
src/mltools/: __init__.py  data.py  draw.py  learn.py  tokenize.py  utils.py
src/scripts/: __init__.py
src/utils/: __init__.py  docs.py  requirements.py
tests/: MLP.ipynb  test.ipynb
tests/datasets/Annotations/: rs00001_jpg.rf.df4be284ed0d766434b5d47421357f78.xml  rs00003_jpg.rf.c4016a73be3c9e877143f78971fcb168.xml
tests/datasets/RODD/Annotations/: rs00006_jpg.rf.0a43842d425be6466fd3cbc20f416e2f.xml  rs00023_jpg.rf.92739ffcba9da4adf51aa3d9cd6a0cd4.xml  rs00024_png_jpg.rf.0dd92db86fcae3051c26334d9c9f1991.xml  rs00024_png_jpg.rf.52a95ca582cfab5c7a0f509cb3d3c658.xml
tests/datasets/crack/Annotations/: rs00004_jpg.rf.bddf3cf933ee59d47b9cba2050bd087e.xml  rs00011_jpg.rf.7073495a55aaa3df7c19385fb4163b76.xml  rs00024_png_jpg.rf.96650f8f8e334d9fe4ce4703241784c0.xml  rs00025_jpg.rf.4197d6856d7f467bdc37503039fbe219.xml
tests/datasets/crack/labels/train/: train_0000.txt  train_0001.txt  train_0002.txt
tests/datasets/crack/labels/val/: test_0000.txt  test_0001.txt  test_0002.txt
tests/src/: MLP.ipynb  data.ipynb  draw.ipynb  utils.ipynb
