[project]
name = "wliafe-mltools"
version = "1.0.10"
authors = [
    {name = "wliafe", email = "914099435@qq.com"},
]
description = "A machine learning tools library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "httpx>=0.28.1",
    "jupyter>=1.0.0",
    "matplotlib>=3.5.1",
    "pandas>=1.2.4",
    "tqdm>=4.67.1",
    "torch>=2.1.0,<2.5.0; python_version >= '3.8' and python_version < '3.9'",
    "torchvision>=0.16.0,<0.20.0; python_version >= '3.8' and python_version < '3.9'",
    "torchaudio>=2.1.0,<2.5.0; python_version >= '3.8' and python_version < '3.9'",
    "torch>=2.5.0; python_version >= '3.9'",
    "torchvision>=0.20.0; python_version >= '3.9'",
    "torchaudio>=2.5.0; python_version >= '3.9'",
    "sphinx>=7.1.2",
    "myst-parser>=3.0.1",
    "sphinx-autodoc-typehints>=2.0.1",
]

[project.scripts]
docs = "utils:build_docs"

[project.urls]
Homepage = "https://github.com/wliafe/mltools"
Issues = "https://github.com/wliafe/mltools/issues"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "mltools"

[project.optional-dependencies]
cu118 = [
    "torch>=2.1.0,<2.5.0; python_version >= '3.8' and python_version < '3.9'",
    "torchvision>=0.16.0,<0.20.0; python_version >= '3.8' and python_version < '3.9'",
    "torchaudio>=2.1.0,<2.5.0; python_version >= '3.8' and python_version < '3.9'",
    "torch>=2.5.0; python_version >= '3.9'",
    "torchvision>=0.20.0; python_version >= '3.9'",
    "torchaudio>=2.5.0; python_version >= '3.9'",
]
cu121 = [
    "torch>=2.1.0,<2.5.0; python_version >= '3.8' and python_version < '3.9'",
    "torchvision>=0.16.0,<0.20.0; python_version >= '3.8' and python_version < '3.9'",
    "torchaudio>=2.1.0,<2.5.0; python_version >= '3.8' and python_version < '3.9'",
    "torch>=2.5.0; python_version >= '3.9'",
    "torchvision>=0.20.0; python_version >= '3.9'",
    "torchaudio>=2.5.0; python_version >= '3.9'",
]
cu124 = [
    "torch>=2.4.0,<2.5.0; python_version >= '3.8' and python_version < '3.9'",
    "torchvision>=0.19.0,<0.20.0; python_version >= '3.8' and python_version < '3.9'",
    "torchaudio>=2.4.0,<2.5.0; python_version >= '3.8' and python_version < '3.9'",
    "torch>=2.5.0; python_version >= '3.9'",
    "torchvision>=0.20.0; python_version >= '3.9'",
    "torchaudio>=2.5.0; python_version >= '3.9'",
]
cu126 = [
    "torch>=2.6.0; python_version >= '3.9'",
    "torchvision>=0.21.0; python_version >= '3.9'",
    "torchaudio>=2.6.0; python_version >= '3.9'",
]
cu128 = [
    "torch>=2.7.0; python_version >= '3.9'",
    "torchvision>=0.22.0; python_version >= '3.9'",
    "torchaudio>=2.7.0; python_version >= '3.9'",
]
cpu = [
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "torchaudio>=2.1.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cu118" },
    { extra = "cu121" },
    { extra = "cu124" },
    { extra = "cu126" },
    { extra = "cu128" },
    { extra = "cpu" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu121", extra = "cu121" },
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cpu", extra = "cpu" },
]
torchvision = [
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu121", extra = "cu121" },
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cpu", extra = "cpu" },
]
torchaudio = [
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu121", extra = "cu121" },
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cpu", extra = "cpu" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
